Bug 465644 - Screen no longer locks after inactivity while Haruna is running
Summary: Screen no longer locks after inactivity while Haruna is running
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-13 01:21 UTC by Aaron Miller
Modified: 2023-04-10 03:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Miller 2023-02-13 01:21:35 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Start with a 4K monitor plugged into a laptop, with the 4K monitor screen area to the upper-left of the laptop screen area (desktop is extended).
2. Observe that screen locks after N minutes of inactivity, where N is specified in settings.
3. Unplug monitor and plug it back in.

OBSERVED RESULT
Screen does not lock after any duration of user inactivity. Screen only locks with Cmd-L, as far as I can tell.

EXPECTED RESULT
Screen locks after N minutes of inactivity, where N is specified in settings.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.26.5, Manjaro
(available in About System)
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Samsung 4K monitor
Comment 1 Aaron Miller 2023-04-10 01:20:52 UTC
This was actually a bug in Haruna Media Player -- whenever it was running, the screen wouldn't lock. I don't know if the external monitor status has anything to do with this.
Comment 2 Nate Graham 2023-04-10 02:29:36 UTC
Generally it's considered intentional for video players to inhibit screen locking while playing video. If they didn't, then you could have the screen lock on you while you were watching the video!

However if the app is inhibiting screen lock while simply running--rather than while playing a video--that would be an app bug.

Can you do some tests to determine this?
Comment 3 Aaron Miller 2023-04-10 03:15:31 UTC
Hi Nate,

I was able to inhibit locking just by starting Haruna (no media playing or even paused).
Comment 4 george fb 2023-04-10 03:56:19 UTC
Git commit e558fc68511913587745fa797aab36be1f5e4cee by George Florea Bănuș.
Committed on 10/04/2023 at 03:56.
Pushed by georgefb into branch 'master'.

mpvitem: don't emit `..Changed` signals when setting certain properties
the signal is emitted in the `eventHandler` method

M  +4    -8    src/mpv/mpvitem.cpp

https://invent.kde.org/multimedia/haruna/commit/e558fc68511913587745fa797aab36be1f5e4cee