mpvitem: don't emit `..Changed` signals when setting certain properties the signal is emitted in the `eventHandler` method

BUG: 465644